--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ lintian (2.5.74) UNRELEASED; urgency=medium
 
   * checks/cruft.desc:
     + [BR] Check for wasm files.  (Closes: #889102)
+  * checks/fields.pm:
+    + [CL] Avoid false positives when checking binary packages depending on
+      toolchain packages by ignoring packages starting with "dh-". Thanks to
+      Josh Triplett for the report.  (Closes: #889486)
 
  -- Chris Lamb <lamby@debian.org>  Sat, 03 Feb 2018 10:51:52 +0000
 
