--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ lintian (2.5.74) UNRELEASED; urgency=medium
     + [CL] Avoid false positives when checking binary packages depending on
       toolchain packages by ignoring packages starting with "dh-". Thanks
       to Josh Triplett for the report.  (Closes: #889486)
+  * checks/patch-systems.pm:
+    + [CL] Avoid emitting "Can't use an undefined value as an ARRAY
+      reference" warnings when debian/patches is a file, not a directory.
+      (Closes: #889535)
   * checks/scripts.desc:
     + [CL] Improve, elaborate and tidy the long description of the
       maintainer-script-should-not-use-recursive-chown-or-chmod tag.
