--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ lintian (2.5.74) UNRELEASED; urgency=medium
     + [BR] Check for wasm files.  (Closes: #889102)
   * checks/fields.pm:
     + [CL] Avoid false positives when checking binary packages depending on
-      toolchain packages by ignoring packages starting with "dh-". Thanks
-      to Josh Triplett for the report.  (Closes: #889486)
+      toolchain packages by ignoring packages starting with "dh-" or ending
+      with "-source". Thanks to Josh Triplett for the report.
+      (Closes: #889486)
   * checks/patch-systems.pm:
     + [CL] Avoid emitting "Can't use an undefined value as an ARRAY
       reference" warnings when debian/patches is a file, not a directory.
