Add debug for javascript fragment

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ lintian (2.5.74) UNRELEASED; urgency=medium
       toolchain packages by ignoring packages starting with "dh-" or ending
       with "-source". Thanks to Josh Triplett for the report.
       (Closes: #889486)
+  * checks/files.pm:
+    + [BR] Add context for privacy breach in order to improve debugging.
   * checks/patch-systems.pm:
     + [CL] Avoid emitting "Can't use an undefined value as an ARRAY
       reference" warnings when debian/patches is a file, not a directory.
