--- a/debian/changelog
+++ b/debian/changelog
@@ -21,11 +21,11 @@ lintian (2.5.74) UNRELEASED; urgency=medium
       Heavily based on a patch by Daniel Kahn Gillmor - thanks!
       (Closes: #889489)
    
-  * data/files/privacy-breaker-fragments:
-    + [BR] Detects new fragments for google cse
-
   * commands/reporting-{html-reports,lintian-harness}.pm:
     + [NT] Register packages that fail during archive wide processing.
+
+  * data/files/privacy-breaker-fragments:
+    + [BR] Detect new fragments for Google CSE.
 
   * lib/Lintian/Util.pm:
     + [NT] Give lower processing priority to packages that repeatedly
