--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ lintian (2.5.74) UNRELEASED; urgency=medium
     + [BR] Check for wasm files.  (Closes: #889102)
     + [CL] Factor out call to _ships_examples to avoid excessive looping
       over $sorted_index.
+    + [CL] Do not emit package-does-not-install-examples if we don't have
+      any binary packages in our laboratory.  (Closes: #889591)
   * checks/fields.pm:
     + [CL] Avoid false positives when checking binary packages depending on
       toolchain packages by ignoring packages starting with "dh-" or ending
