--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,10 @@ lintian (2.5.74) UNRELEASED; urgency=medium
     + [CL] Avoid emitting "Can't use an undefined value as an ARRAY
       reference" warnings when debian/patches is a file, not a directory.
       (Closes: #889535)
+  * checks/rules.{desc,pm}:
+    + [CL] Remove override_dh_auto_test-does-not-check-DEB_BUILD_PROFILES
+      (for now) as there are just too many false-positive cases to check.
+      (Closes: #889592)
   * checks/scripts.desc:
     + [CL] Improve, elaborate and tidy the long description of the
       maintainer-script-should-not-use-recursive-chown-or-chmod tag.
