--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ lintian (2.5.74) UNRELEASED; urgency=medium
       over $sorted_index.
     + [CL] Do not emit package-does-not-install-examples if we don't have
       any binary packages in our laboratory.  (Closes: #889591)
+    + [CL] Improve the description of package-does-not-install-examples to
+      give more debhelper advice.
   * checks/fields.pm:
     + [CL] Avoid false positives when checking binary packages depending on
       toolchain packages by ignoring packages starting with "dh-" or ending
