Warn about packages that use ENABLED="true" (etc.) in /etc/default files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,9 @@ lintian (2.5.74) UNRELEASED; urgency=medium
   * checks/java.{desc,pm}:
     + [CL] Only warn about bad-jar-name for "public" .jar files.
       (Closes: #889628)
+  * checks/init.d.{desc,pm}:
+    + [CL] Warn about packages that use ENABLED="true" (etc.) in
+      /etc/default files.
   * checks/patch-systems.pm:
     + [CL] Avoid emitting "Can't use an undefined value as an ARRAY
       reference" warnings when debian/patches is a file, not a directory.
