Add a classification tag for the .deb data tarball compression format. (Closes: #738442)

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ lintian (2.5.74) UNRELEASED; urgency=medium
       give more debhelper advice.
     + [CL] Assume that if a source package generates a binary ending in
       "-examples" then it does ship examples.
+  * checks/deb-format.{desc,pm}:
+    + [CL] Add a classification tag for the .deb data tarball compression
+      format.  (Closes: #738442)
   * checks/fields.pm:
     + [CL] Avoid false positives when checking binary packages depending on
       toolchain packages by ignoring packages starting with "dh-" or ending
