Check the first line of the description separately for spelling errors to avoid false-positive duplicate checks across a patch description's synopsis and its body. (Closes: #890100)

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ lintian (2.5.75) UNRELEASED; urgency=medium
     + [CL] Avoid false positives when checking for typos by ignoring files
       or patch descriptions that contain the words "typo" or "spelling".
       Thanks to Bas Couwenberg for the report.  (Closes: #889964)
+    + [CL] Check the first line of the description separately for spelling
+      errors to avoid false-positive duplicate checks across a patch
+      description's synopsis and its body.  (Closes: #890100)
   * checks/python.desc:
     + [CL] Underline that maintainers do not need to override the
       new-package-should-not-package-python2-module tag but rather leave a
