--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ lintian (2.5.75) UNRELEASED; urgency=medium
       new-package-should-not-package-python2-module tag but rather leave a
       comment in debian/changelog.
 
+  * commands/reporting-html-reports.html:
+    + [NT] Minimize generated SVG files if scour is installed and
+      available in PATH.
+
  -- Chris Lamb <lamby@debian.org>  Thu, 08 Feb 2018 18:00:44 +0000
 
 lintian (2.5.74) unstable; urgency=medium
