--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ lintian (2.5.75) UNRELEASED; urgency=medium
   * checks/changelog-file.desc:
     + [CL] When checking latest-debian-changelog-entry-without-new-version
       ignore any change of epoch.  (Closes: #889991)
+  * checks/debhelper.desc:
+    + [CL] Add a missing verb to the long description of the
+      dh-quilt-addon-but-quilt-source-format tag.
   * checks/files.pm:
     + [CL] Tidy logic for detecting allowed rel="" values in <link/>
       HTML tags.
