--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.76) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 14 Feb 2018 15:06:27 +0000
+
 lintian (2.5.75) unstable; urgency=medium
 
   * Summary of tag changes:
