--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.76) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * debian/source/lintian-overrides:
+    + [CL] Drop all the overrides for Lintian titself now that we use the
+      <!nocheck> build profile for the previously-spurious warnings.
+
  -- Chris Lamb <lamby@debian.org>  Wed, 14 Feb 2018 15:06:27 +0000
 
 lintian (2.5.75) unstable; urgency=medium
