--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ lintian (2.5.76) UNRELEASED; urgency=medium
     + [CL] Correct a grammatical error and tighten up the language of the
       "binary-package-depends-on-toolchain-package" tag's description.
       Thanks to Gregor Herrmann for the report.  (Closes: #890530)
+  * checks/rules.pm:
+    + [CL] Update override_dh_auto_test-does-not-check-DEB_BUILD_OPTIONS
+      to fix a number of false positives. Thanks to Gregor Herrmann for
+      the report.  (Closes: #890537)
 
   * debian/source/lintian-overrides:
     + [CL] Drop all the overrides for Lintian titself now that we use the
