--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ lintian (2.5.76) UNRELEASED; urgency=medium
     + [CL] Also check, for example, "override_dh_fixperms-indep" and
       "override_dh_fixperms-arch" targets for
       "override_dh_fixperms-does-not-call-dh_fixperms", etc.
+    + [CL] Prevent a large number of false-positives when checking the
+      debian-rules-is-dh_make-template tag.  Thanks to Evgeni Golov for
+      the report.  (Closes: #890660)
   * checks/scripts.pm:
     + [CL] Prevent some false-positives in udevadm-called-without-guard.
   * checks/watch-file.pm:
